[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.17.0" }
serde = "1.0"
#clap = "4.4"
k256 = { version = "0.13", features = ["serde"] }
rand_core = "0.6.4"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
